# rome2024_tutorials

./: README.md
ROS2/Gazebo/: README.md
ROS2/Turtlesim/: README.md
Rome_Exercises/: README.md
Tutorial2_Nav2/: README.md
Tutorial3_BehaviourTrees/: README.md
Tutorial3_BehaviourTrees/rome_bt/: CMakeLists.txt  package.xml
Tutorial3_BehaviourTrees/rome_bt/behavior_trees/: bt_example1.xml  bt_example2.xml  bt_example3.xml  plugins.txt
Tutorial3_BehaviourTrees/rome_bt/include/: bt_executor.h  gotopose_node.h  publisher_node.h  subscriber_node.h
Tutorial3_BehaviourTrees/rome_bt/launch/: execute_bt.launch.py
Tutorial3_BehaviourTrees/rome_bt/src/: bt_executor.cpp  gotopose_node.cpp  publisher_node.cpp  subscriber_node.cpp
Tutorial3_BehaviourTrees/rome_sim/: package.xml  setup.cfg  setup.py
Tutorial3_BehaviourTrees/rome_sim/launch/: tb4_sim_bringup.launch.py
Tutorial3_BehaviourTrees/rome_sim/params/: nav2_params.yaml
